--- a/sass/main.sass
+++ b/sass/main.sass
@@ -127,9 +127,24 @@ body
 	margin: 0
 	padding-bottom: 16px 
 	text-transform: uppercase
+	font-weight: 700
 
 .heading-light
 	color: #fff
 	border-bottom: 1px dashed #5a5a5a
+
+.contacts
+	&-title 
+		color: #fff
+	&-text
+		color: #ababab
+		text-decoration: none
+		padding-left: 20px
+	&-item
+		padding-bottom: 24px
+		border-bottom: 2px solid #5a5a5a
+	
+
+
 
 @import "media" // Всегда в конце
