--- a/sass/main.sass
+++ b/sass/main.sass
@@ -94,16 +94,7 @@ body
 	font-family: $default-font
 	overflow-x: hidden
 
-.profile-photo
-	height: 270px
-	background-image: url(../img/photo.png)
-	background-size: cover
-	background-position: center
-	background-repeat: no-repeat
 
-.profile-text
-	line-height: 24.19px
-	font-size: 13px
 
 .container
 	display: flex
@@ -116,35 +107,98 @@ body
 	max-width: 350px	
 	background-color: #39383a
 	color: #ababab
+	&-info
+		padding-left: 30px
+		padding-right: 30px
+		padding-top: 50px
+		padding-bottom: 70px
+	&-photo
+		height: 270px
+		background-image: url(../img/photo.png)
+		background-size: cover
+		background-position: center
+		background-repeat: no-repeat
+	&-text
+		line-height: 24.19px
+		font-size: 13px
+		margin-bottom: 50px
 
-.profile-info
-	padding-left: 30px
-	padding-right: 30px
-	padding-top: 50px
-	padding-bottom: 70px
+
 
 .heading
 	margin: 0
 	padding-bottom: 16px 
 	text-transform: uppercase
 	font-weight: 700
-
-.heading-light
-	color: #fff
-	border-bottom: 1px dashed #5a5a5a
+	&-light
+		color: #fff
+		border-bottom: 1px dashed #5a5a5a
 
 .contacts
+	margin-bottom: 70px	
 	&-title 
 		color: #fff
+		margin-bottom: 13px
+		font-size: 16px
+		font-weight: 400
 	&-text
 		color: #ababab
 		text-decoration: none
 		padding-left: 20px
+		line-height: 20,97px
 	&-item
+		padding-top: 24px
 		padding-bottom: 24px
 		border-bottom: 2px solid #5a5a5a
-	
+
+	.fas 
+		margin-right: 10px	
+
+address
+	font-style: normal
+
+.languages 
+	display: flex
+	flex-wrap: wrap // если круг не помещается, то переносится
+	padding-top: 40px
 
 
+.language
+	width: 100px
+	height: 100px
+	border: 6px solid #5c5c5c
+	border-radius: 50%
+	display: flex
+	justify-content: center
+	align-items: center
+	flex-direction: column
+	margin-bottom: 30px
+	margin-right: 30px
+	&:nth-child(3)
+		margin-bottom: 0
+	&-text
+		text-transform: uppercase
+		font-size: 11px
+	&-per	
+		font-size: 15px
+		font-weight: 600
+
+
+
+.lines
+	display: flex
+	flex-direction: column
+	justify-content: center
+
+.line
+	display: block
+	width: 90px
+	height: 2px
+	background-color: #5c5c5c	
+	margin-top: 10px
+	margin-bottom: 10px
+	&:nth-child(2)
+		width: 100px
+		margin-left: 20px		
 
 @import "media" // Всегда в конце
