--- a/sass/main.sass
+++ b/sass/main.sass
@@ -98,13 +98,15 @@ body
 
 .container
 	display: flex
+	justify-content: center
 	max-width: 960px
 	background-color: #eaeaea
 	margin: 20px auto
 	padding: 0px
+	box-shadow: 1px 1px 10px rgba(0,0,0,0.2)
 
 .profile
-	max-width: 350px	
+	flex-basis: 40%
 	background-color: #39383a
 	color: #ababab
 	&-info
@@ -199,6 +201,78 @@ address
 	margin-bottom: 10px
 	&:nth-child(2)
 		width: 100px
-		margin-left: 20px		
+		margin-left: 20px	
+
+// правая колонка
+.resume
+	padding: 25px 30px
+	flex-basis: 63%
+	background-color: #fff
+	
+	&-wrap
+		padding: 36px 56px
+		min-height: 100%
+ 		border: 3px solid rgba(168, 168, 168, 0.44)		
+
+.logo 
+	display: flex
+	justify-content: center
+	margin-bottom: 38px
+	&-lines
+		display: flex
+		align-items: center
+		justify-content: center
+		flex-direction: column
+		margin-left: 37px
+		margin-right: 37px
+	&-line
+		width: 43px
+		height: 2px
+		background-color: #39383a
+		margin-top: 10px
+		margin-bottom: 10px
+	&-lines_left .logo-line:nth-child(2)
+		margin-right: 20px
+		width: 55px
+	&-lines_right .logo-line:nth-child(2)
+		margin-left: 20px
+		width: 55px
+	&-img
+		width: 90px
+		height: 90px
+		border: 1px solid #39383a
+		border-radius: 50%
+		display: flex
+		justify-content: center
+		align-items: center		
+	
+.about 
+
+	text-align: center
+.name 
+	font-size: 16px
+	text-transform: uppercase
+	letter-spacing: 10.75px	
+	margin-bottom: 15px
+
+.position
+	position: inline-block
+	font-size: 9px
+	text-transform: uppercase
+	color: #808080
+	margin-bottom: 30px
+
+.about
+	&-address
+		font-size: 13px
+		margin-bottom: 15px
+	&-contacts
+		font-size: 8px
+		&__link
+			text-decoration: none
+			color: #777777
+		
+
+
 
 @import "media" // Всегда в конце
