--- a/sass/main.sass
+++ b/sass/main.sass
@@ -330,6 +330,7 @@ address
 			justify-content: space-between
 
 .level
+	top: 5px
 	width: 70%
 	height: 8px
 	border: 1px solid #39383a		
@@ -342,14 +343,13 @@ address
 		left: 0
 		top: 0
 		content: ''	
-
-.level
 	&-30:before
 		width: 30%
 	&-50:before
 		width: 50%
 	&-90:before
 		width: 90%
+
 
 
 @import "media" // Всегда в конце
